--- a/practice/index.html
+++ b/practice/index.html
@@ -11,5 +11,7 @@
 	<body>
 		<a href="../index.html" class="back-link">Back to Main</a>
 		<h1>Practice, practice, practice!</h1>
+		<canvas id="canvas-1"></canvas>
+		<script src="canvas.js"></script>
 	</body>
 </html>
